tests/lean/structure_notation_dep_mvars.lean
instance : lawful_monad list := { .. }
